--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cimmyt-grid-component": "^1.0.0",
+    "cimmyt-grid-lib": "^1.0.0",
+    "cimmyt-grid-library": "^1.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
